feat: Implement PWA functionality and local storage
Integrates a service worker for offline capabilities and updates the PWA manifest.
Stores pregnancy data locally using localStorage for persistence between sessions.
Refactors App component to manage multiple pregnancies and patient data.
Removes external Recharts dependency.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obstetrics & Midwifery Assistant</title>
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#e11d48">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -33,8 +36,6 @@
         }
       }
     </script>
-    <!-- Recharts for charts -->
-    <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
     <!-- Jalaali-JS for Persian Calendar -->
     <script src="https://unpkg.com/jalaali-js/dist/jalaali.js"></script>
   <script type="importmap">
